# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2022-08-04 Michael Truog   <mjtruog at protonmail dot com>

    * Fix service shutdown during initialization so it is not an error
      if the reason is shutdown or {shutdown, any()}
      (for both internal and external services)
    * Limit the cloudi_service_http_cowboy reuse_port argument to
      Linux and FreeBSD (to keep the argument meaning the same)
    * Haskell support with GHC >= 9.0 requires the use of
      cabal-install >= 3.4 which has removed the v1-sandbox command
      (https://github.com/haskell/cabal/issues/6445) and all
      sandbox functionality
        * cabal v2-install --lib appears unable to provide a local
          installation in a sandbox-like directory though that functionality
          may be pursued as an "env" command
          (https://github.com/haskell/cabal/issues/6481)
        * Support of GHC >= 9.0 will be blocked on cabal-install's
          ability to use local installations of libraries
        * Changes based on the current cabal-install support
          have been added for further improvement
    * Update Haskell network dependency to 3.1.2.7
    * Update Haskell zlib dependency to 0.6.3.0

2022-07-30 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_math module with functions erfinv/1 and erfcinv/1
    * Increase default test timeout from 10 seconds to 20 seconds

2022-07-23 Michael Truog   <mjtruog at protonmail dot com>

    * Fix internal/external service restart tracking when
      count_process > 1 and the service configuration option
      restart_all is false (the default)
        * Fixes the CloudI Service API services_status
          uptime_restarts value
        * Ensures the max_r service configuration value is enforced
          as the maximum number of restarts for all processes
    * Improve cloudi_service_api_batch processing when the argument
      purge_on_error is true (the default) and a service